2014-07-02  Per Bothner  <per@bothner.com>

	* Compilation.java (compileConstant): Update for 'character'
	now being implemented as an 'int'.
	* ConsumerTarget.java (compileFromStack, compileWrite): Likewise.
	* InlineCalls.java: Likewise.
	* ExpVisitor.java (visit): Pull body out into new static method.

2014-07-01  Per Bothner  <per@bothner.com>

	* ApplyExp.java (isSimple *2): New helper methods.

	* InlineCalls.java (currentVisitor): New ThreadLocal.
	(inlineCalls): Set currentVisitor.

2014-06-30  Per Bothner  <per@bothner.com>

	Use new annotations to record language-specific types in class files.
	* Language.java (encodeType, decodeType): New methods.
	(resolveTypeVariables, resolveTypeVariable): Moved from
	PrimProcedure.java.
	(declFromField): Check SourceName annotation.
	* PrimProcedure.java (resolveTypeVariables, resolveTypeVariable):
	Moved from Language.java.
	(<init>): Check SourceMethodName annotation.
	* Declaration.java (makeField): Possibly add SourceType annotation.
	* LambdaExp.java (addMethodFor): Possibly add SourceMethodType
	annotation.
	* TypeValue.java (encodeType): New method.

	* PrimProcedure.java (matchN): Add not-yet-needed call to convertToRaw.

	* PrimProcedure.java (matchN): Support rest (varargs) arrays
	of primitive type.

	* PrimProcedure.java (compileArgs): Fix thinko re array type.

	* ModuleInfo.java (setCompilation): Make sure filename is non-null.

	* InlineCalls.java (checkType): On type error, if type is PrimType,
	convert it to a boxed type to force a run-time exception.
	* Compilation.java (makeCoercion): Change return type to ApplyExp.

2014-06-29  Per Bothner  <per@bothner.com>

	* LambdaExp.java (class Closure): Change to a static member class.

2014-06-28  Per Bothner  <per@bothner.com>

	* Declaration.java (getAnnotation *2): New method.
	* LambdaExp.java (compileSetField): Emit field annotations.
	(compileAsMethod): Emit method annotations.

2014-06-25  Per Bothner  <per@bothner.com>
