@@ -680,6 +680,8 @@ public class ApplyExp extends Expression
     static boolean inlineCompile(Procedure proc, ApplyExp exp,
                                  Compilation comp, Target target)
             throws Throwable {
+        if (proc instanceof PrimProcedure)
+            return ((PrimProcedure) proc).compile(exp, comp, target);
         Object propval = proc.getProperty(Procedure.compilerXKey, null);
         if (propval instanceof String) {
             Object method = InlineCalls.resolveInliner(proc, (String) propval,
